// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnableCustomFieldsOption renders a checked checkbox and a confirmation message when toggled on 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<div>
  <div
    class="preference-base-option"
  >
    <div
      class="components-base-control components-toggle-control emotion-0 emotion-1"
    >
      <div
        class="components-base-control__field emotion-2 emotion-3"
      >
        <div
          class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
          data-wp-c16t="true"
          data-wp-component="HStack"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-3"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
            for="inspector-toggle-control-3"
            style="--wp-components-flex-item-display: block;"
          />
        </div>
      </div>
    </div>
    <p
      class="edit-post-preferences-modal__custom-fields-confirmation-message"
    >
      A page reload is required for this change. Make sure your content is saved before reloading.
    </p>
    <button
      class="components-button is-next-40px-default-size is-secondary"
      type="button"
    >
      Show & Reload Page
    </button>
  </div>
</div>
`;

exports[`EnableCustomFieldsOption renders a checked checkbox when custom fields are enabled 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<div>
  <div
    class="preference-base-option"
  >
    <div
      class="components-base-control components-toggle-control emotion-0 emotion-1"
    >
      <div
        class="components-base-control__field emotion-2 emotion-3"
      >
        <div
          class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
          data-wp-c16t="true"
          data-wp-component="HStack"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-0"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
            for="inspector-toggle-control-0"
            style="--wp-components-flex-item-display: block;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EnableCustomFieldsOption renders an unchecked checkbox and a confirmation message when toggled off 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<div>
  <div
    class="preference-base-option"
  >
    <div
      class="components-base-control components-toggle-control emotion-0 emotion-1"
    >
      <div
        class="components-base-control__field emotion-2 emotion-3"
      >
        <div
          class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
          data-wp-c16t="true"
          data-wp-component="HStack"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
        >
          <span
            class="components-form-toggle"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-2"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
            for="inspector-toggle-control-2"
            style="--wp-components-flex-item-display: block;"
          />
        </div>
      </div>
    </div>
    <p
      class="edit-post-preferences-modal__custom-fields-confirmation-message"
    >
      A page reload is required for this change. Make sure your content is saved before reloading.
    </p>
    <button
      class="components-button is-next-40px-default-size is-secondary"
      type="button"
    >
      Hide & Reload Page
    </button>
  </div>
</div>
`;

exports[`EnableCustomFieldsOption renders an unchecked checkbox when custom fields are disabled 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<div>
  <div
    class="preference-base-option"
  >
    <div
      class="components-base-control components-toggle-control emotion-0 emotion-1"
    >
      <div
        class="components-base-control__field emotion-2 emotion-3"
      >
        <div
          class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
          data-wp-c16t="true"
          data-wp-component="HStack"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
        >
          <span
            class="components-form-toggle"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-1"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
            for="inspector-toggle-control-1"
            style="--wp-components-flex-item-display: block;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
